feat: nameing 페이지 구현